[gd_scene load_steps=64 format=2]

[ext_resource path="res://scenes/enemies/knigth/knight.gd" type="Script" id=1]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Death.png" type="Texture" id=2]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Run.png" type="Texture" id=3]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Attacks.png" type="Texture" id=4]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Hurt.png" type="Texture" id=5]
[ext_resource path="res://sprites/2D_SL_Knight_v1.0/Pray.png" type="Texture" id=6]
[ext_resource path="res://effects/enemies/59990__qubodup__swosh-03.ogg" type="AudioStream" id=7]

[sub_resource type="AtlasTexture" id=142]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=143]
atlas = ExtResource( 6 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=144]
atlas = ExtResource( 6 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=145]
atlas = ExtResource( 6 )
region = Rect2( 384, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=146]
atlas = ExtResource( 6 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=147]
atlas = ExtResource( 6 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=148]
atlas = ExtResource( 6 )
region = Rect2( 256, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=149]
atlas = ExtResource( 6 )
region = Rect2( 384, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=150]
atlas = ExtResource( 6 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=151]
atlas = ExtResource( 6 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=152]
atlas = ExtResource( 6 )
region = Rect2( 256, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=153]
atlas = ExtResource( 6 )
region = Rect2( 384, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=135]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=136]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=137]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=138]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=139]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=140]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=141]
atlas = ExtResource( 4 )
region = Rect2( 768, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=131]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=132]
atlas = ExtResource( 2 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=133]
atlas = ExtResource( 2 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=134]
atlas = ExtResource( 2 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=120]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=121]
atlas = ExtResource( 5 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=122]
atlas = ExtResource( 5 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=123]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=124]
atlas = ExtResource( 3 )
region = Rect2( 128, 0, 128, 64 )

[sub_resource type="AtlasTexture" id=125]
atlas = ExtResource( 3 )
region = Rect2( 0, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=126]
atlas = ExtResource( 3 )
region = Rect2( 128, 64, 128, 64 )

[sub_resource type="AtlasTexture" id=127]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=128]
atlas = ExtResource( 3 )
region = Rect2( 128, 128, 128, 64 )

[sub_resource type="AtlasTexture" id=129]
atlas = ExtResource( 3 )
region = Rect2( 0, 192, 128, 64 )

[sub_resource type="AtlasTexture" id=130]
atlas = ExtResource( 3 )
region = Rect2( 128, 192, 128, 64 )

[sub_resource type="SpriteFrames" id=11]
animations = [ {
"frames": [ SubResource( 142 ), SubResource( 143 ), SubResource( 144 ), SubResource( 145 ), SubResource( 146 ), SubResource( 147 ), SubResource( 148 ), SubResource( 149 ), SubResource( 150 ), SubResource( 151 ), SubResource( 152 ), SubResource( 153 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 135 ), SubResource( 136 ), SubResource( 137 ), SubResource( 138 ), SubResource( 139 ), SubResource( 140 ), SubResource( 141 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 131 ), SubResource( 132 ), SubResource( 133 ), SubResource( 134 ) ],
"loop": false,
"name": "death",
"speed": 5.0
}, {
"frames": [ SubResource( 120 ), SubResource( 121 ), SubResource( 122 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
}, {
"frames": [ SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ), SubResource( 129 ), SubResource( 130 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=154]
radius = 10.8333
height = 44.0001

[sub_resource type="Animation" id=77]
resource_name = "Idle"
length = 1.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}

[sub_resource type="Animation" id=78]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("attackRaycast:enabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("attack:stream")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 7 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attack:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=108]
resource_name = "attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4, 5, 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("attackRaycast:enabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.701881, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("attack:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("attack:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=79]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}

[sub_resource type="Animation" id=85]
resource_name = "hit"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "hit" ]
}

[sub_resource type="Animation" id=72]
resource_name = "walking"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walking" ]
}

[sub_resource type="AnimationNodeAnimation" id=80]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=109]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=83]
animation = "death"

[sub_resource type="AnimationNodeAnimation" id=86]
animation = "hit"

[sub_resource type="AnimationNodeAnimation" id=73]
animation = "walking"

[sub_resource type="AnimationNodeStateMachineTransition" id=81]

[sub_resource type="AnimationNodeStateMachineTransition" id=82]

[sub_resource type="AnimationNodeStateMachineTransition" id=84]

[sub_resource type="AnimationNodeStateMachineTransition" id=87]

[sub_resource type="AnimationNodeStateMachineTransition" id=88]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=110]

[sub_resource type="AnimationNodeStateMachineTransition" id=111]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=74]
states/Idle/node = SubResource( 80 )
states/Idle/position = Vector2( 436.383, 177.667 )
states/attack/node = SubResource( 109 )
states/attack/position = Vector2( 631.787, 43.1689 )
states/death/node = SubResource( 83 )
states/death/position = Vector2( 647, 184.104 )
states/hit/node = SubResource( 86 )
states/hit/position = Vector2( 436.037, -30.3333 )
states/walking/node = SubResource( 73 )
states/walking/position = Vector2( 223, 186.161 )
transitions = [ "Idle", "walking", SubResource( 81 ), "walking", "Idle", SubResource( 82 ), "Idle", "death", SubResource( 84 ), "Idle", "hit", SubResource( 87 ), "hit", "Idle", SubResource( 88 ), "Idle", "attack", SubResource( 110 ), "attack", "Idle", SubResource( 111 ) ]
start_node = "walking"
end_node = "death"
graph_offset = Vector2( -175.361, 1.21385 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=89]

[node name="Enemy" type="KinematicBody2D" groups=["enemies"]]
position = Vector2( 328, 235 )
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 8.90456, -19.4523 )
scale = Vector2( 1.36087, 1.36087 )
frames = SubResource( 11 )
animation = "idle"
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 7.5, -7.49997 )
rotation = -3.14159
shape = SubResource( 154 )

[node name="Derecha" type="RayCast2D" parent="."]
position = Vector2( 28, 9 )
enabled = true
cast_to = Vector2( 0, 80 )

[node name="Izquierda" type="RayCast2D" parent="."]
position = Vector2( -18, 5 )
enabled = true
cast_to = Vector2( 0, 85 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 77 )
anims/RESET = SubResource( 78 )
anims/attack = SubResource( 108 )
anims/death = SubResource( 79 )
anims/hit = SubResource( 85 )
anims/walking = SubResource( 72 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 74 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 89 )

[node name="detectAttack" type="RayCast2D" parent="."]
visible = false
position = Vector2( 7, -8 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="attackRaycast" type="RayCast2D" parent="."]
position = Vector2( 7, -8 )
enabled = true
cast_to = Vector2( 40, 0 )

[node name="vision" type="RayCast2D" parent="."]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( 200, 0 )

[node name="visionBack" type="RayCast2D" parent="."]
position = Vector2( 9, 0 )
enabled = true
cast_to = Vector2( -150, 0 )

[node name="Tween" type="Tween" parent="."]

[node name="attack" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 0.666672, 0.666672 )
stream = ExtResource( 7 )
